--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> Odin recipies </h1>
-    <img src="img1.jpg" alt="error while loading image" width="20%" height="50%"><br>
+    <img src="img1.jpg" alt="error while loading image" width="1700" height="700"><br>
     <b>Recipie 1</b> <a href="/recipies/recipie1.html" >Coffee and Irish Cream Bundt cake</a><br>
     <b>Recipie 2</b><a href="/recipies/recipie2.html" >Recipie 2</a><br>
     <b>Recipie 3</b> <a href="/recipies/recipie3.html" >Recipie 3</a><br>
