--- a/recipies/recipie1.html
+++ b/recipies/recipie1.html
@@ -1,4 +1,7 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,52 +10,53 @@
 
 <body>
     <h2>Coffee and Irish Cream Bundt cake</h2>
-    <img src="img2.jpg" alt="error" width="1900" height="600"> <br>
-    <p> <h2>DESCRIPTION:</h2>
-       <h3>INGREDIENTS</h3> 
-    <ul type="solid rectangle">
-       <li> ¼ cup strongly brewed coffee, cooled to room temperature</li>
- <li> tablespoons instant espresso powder  </li>
- <li>
- </li>2 ¾ cups all-purpose flour</li>
-     <li>2 teaspoons baking powder</li>
-         ¾ teaspoon salt</li>
-  <li>1 cup unsalted butter, softened</li>
-  <li>1 (8 ounce) package cream cheese, softened</li>
-  <li>1 cup white sugar</li>
-  <li>1 cup firmly packed brown sugar</li>
-  <li>3 large eggs, at room temperature</li>
-  <li>1 tablespoon vanilla extract</li>
-  <li>1 cup Irish cream liqueur (such as Baileys®)</li>
-  <li>3/4% cup mini chocolate chip</li>
-    </ul>
-    <h3> STEPS</h3>
+    <p>
+    <img src="img2.jpg" alt="error" width="2000" height="600">
+     <h2> DESCRIPTION:</h2>
+     <h3>INGREDIENTS:</h3>
+         <ul type="solid disc">
+             <li> ¼ cup strongly brewed coffee, cooled to room temperature</li>  <br>
+                <li>2 tablespoons instant espresso powder</li>  <br>
+                <li> ¾ cups all-purpose flour</li>   <br>
+                <li>2 teaspoons baking powder</li>  <br>
+                <li>¾ teaspoon salt</li>  <br>
+                <li>1 cup unsalted butter, softened</li>  <br>
+                <li>1 (8 ounce) package cream cheese, softened</li>  <br>
+               <li>> 1 cup white sugar</li>  <br>
+                <li>1 cup firmly packed brown sugar</li>  <br>
+               <li> 3 large eggs, at room temperature</li>  <br>
+                <li>1 tablespoon vanilla extract</li>  <br>
+                <li>1 cup Irish cream liqueur (such as Baileys®)</li>  <br>
+               <li>¾ cup mini chocolate chips</li>  <br>
+              
+         </ul>
+         <h3>STEPS</h3>
     <ul type="Sollid Disc">
-        <li><b>Step 1:</b>
 
-            Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 10-cup Bundt® pan.
-</li> <br>
-        <li><b>Step 2:</b>
-
-            Mix together coffee and espresso powder in a small bowl or measuring cup until dissolved. Set aside.
+        <li><b>Step 1</b>
+            Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 10-cup Bundt® 
         </li> <br>
-        <li><b>Step 3:</b>
+        <b>Step 2</b>
+       Mix together coffee and espresso powder in a small bowl or measuring cup until dissolved. Set asi
+        </li><br>
+        <b>Step 3</b>
+        Mix together flour, baking powder, and salt in a medium bowl until combin</li><br>
+        <b>Step 4</b>
 
-            Mix together flour, baking powder, and salt in a medium bowl until combined.
-        </li> <br>
-        <li><b>Step 4:</b>
+        Cream together butter, cream cheese, white sugar, and brown sugar in a large bowl until smooth and
+        fluffy.
+        Beat in eggs, 1 at a time, mixing well after each addition. Add coffee-espresso mixture and vanilla
+        and mix
+        until combined. Add 1/2 of the flour mixture and stir until just combined. Pour in Irish cream and
+        mix until
+        ombined. Add remaining flour mixture and mix until just combined. Fold in mini chocolate chips.
+        </li><br>
+        <li><b>Step 5</b>
 
-            Cream together butter, cream cheese, white sugar, and brown sugar in a large bowl until smooth and fluffy.
-            Beat in eggs, 1 at a time, mixing well after each addition. Add coffee-espresso mixture and vanilla and mix
-            until combined. Add 1/2 of the flour mixture and stir until just combined. Pour in Irish cream and mix until
-            combined. Add remaining flour mixture and mix until just combined. Fold in mini chocolate chips.
-        </li> <br>
-        <li><b>Step 5:</b>
-
-            Pour batter evenly into the prepared pan. Tap pan gently on the counter a few times to disperse any air
-            bubbles.
-        </li> <br>
-        <li><b>Step 6:</b>
+                Pour batter evenly into the prepared pan. Tap pan gently on the counter a few times to disperse any air
+                bubbles.
+        </li><br>
+        <li> <b>Step 6</b><br>
 
             Place pan into the preheated oven and bake until the top of the cake springs back lightly when touched, 55
             to 60 minutes. Allow cake to cool for 15 minutes in the pan before removing to a wire rack to cool
@@ -60,7 +64,8 @@
         </li>
     </ul>
 </p>
-          <p> <a href="recipie1.html"> Return to top <br> <a href="../index.html">Back to Main Page</a></p>
-</body>
-</html>
+<p> <a href="recipies1.html"> Move to Top.</a> <br> <br> <a href="../index.html"> Go Back to Home page</a></p>
 
+</body>
+
+</html>
