Added image to recipie2.html and some minor changes in index.html,recipie1.html

--- a/recipies/recipie1.html
+++ b/recipies/recipie1.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h2>Coffee and Irish Cream Bundt cake</h2>
+    <hr>
+    <h1>Coffee and Irish Cream Bundt cake</h2>
+    <hr>
     <p>
     <img src="img2.jpg" alt="error" width="2000" height="600">
      <h2> DESCRIPTION:</h2>
@@ -64,8 +66,9 @@
         </li>
     </ul>
 </p>
-<p> <a href="recipies1.html"> Move to Top.</a> <br> <br> <a href="../index.html"> Go Back to Home page</a></p>
-
+<hr> <br>
+<p> <a href="recipie1.html"> Move to Top.</a> <br> <br> <a href="../index.html"> Go Back to Home page</a></p><br>
+<hr>
 </body>
 
 </html>
