--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <h1> Odin recipies </h1>
     <img src="img1.jpg" alt="error while loading image" width="1700" height="700"><br>
-    <b>Recipie 1</b> <a href="/recipies/recipie1.html" >Coffee and Irish Cream Bundt cake</a><br>
-    <b>Recipie 2</b><a href="/recipies/recipie2.html" >Recipie 2</a><br>
-    <b>Recipie 3</b> <a href="/recipies/recipie3.html" >Recipie 3</a><br>
+    <h4> lets try these given below recipies and have fun.</h4>
+    <hr><br>
+    <b>Recipie 1:</b> <a href="/recipies/recipie1.html" >Coffee and Irish Cream Bundt cake</a><br> 
+    <br>
+    <b>Recipie 2:</b><a href="/recipies/recipie2.html" >Irish Soda Bread Muffins</a><br>
+  <br> <hr>
 </body>
 </html>
