--- a/recipies/recipie2.html
+++ b/recipies/recipie2.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
+    <hr>
     <h1>IRISH SODA BREAD MUFFINS</h1>
+     <hr>
     <p>
+        <img src="img3.jpg" alt="error" width="2000" height="600">
     <h2>DESCRIPTION:</h2>
     For a golden top, brush muffins with more melted butter and top with demerara sugar before baking.
     <H3>INGREDIENTS:</H3>
@@ -28,7 +31,7 @@
         <li>¼ cup butter, melted </li>
     </ul>
     <h3>STEPS</h3>
-    <ol type="solid disc">
+    <ul type="solid disc">
 
         <Li> <b>Step 1</b>
 
@@ -50,10 +53,12 @@
         Bake in the preheated oven until a toothpick inserted into the center comes out clean, 20 to 30 minutes.
 
     </li>
-    </ol>
+    </ul>
+    
     </p>
-    <p> <a href="recipies2.html"> Move to Top.</a> <br> <br> <a href="../index.html"> Go Back to Home page</a></p>
-
+    <hr> <br>
+    <p> <a href="recipie2.html"> Move to Top.</a> <br> <br> <a href="../index.html"> Go Back to Home page</a></p>
+    <br> <hr>
 </body>
 
 </html>
