--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="img1.jpg" alt="error while loading image" width="1700" height="700"><br>
     <h4> lets try these given below recipies and have fun.</h4>
     <hr><br>
-    <b>Recipie 1:</b> <a href="/recipies/recipie1.html" >Coffee and Irish Cream Bundt cake</a><br> 
+    <b>Recipie 1:</b> <a href="odin-recipies/recipies/recipie1.html" >Coffee and Irish Cream Bundt cake</a><br> 
     <br>
-    <b>Recipie 2:</b><a href="/recipies/recipie2.html" >Irish Soda Bread Muffins</a><br>
+    <b>Recipie 2:</b><a href="odin-recipies/recipies/recipie2.html" >Irish Soda Bread Muffins</a><br>
   <br> <hr>
 </body>
 </html>
